Fix sidebar margin flashing wrong size on page load

--- a/css/main.css
+++ b/css/main.css
@@ -118,10 +118,10 @@ a:hover .icon-nav-message-btr { background-position: -28px 0; }
 	border: 2px solid #0074bd;
 }
 
-#navigation .rbx-scrollbar > .mCSB_inside > .mCSB_container {
-	margin-right: 0;
+body #navigation .rbx-scrollbar > ul,
+body #navigation .rbx-scrollbar .mCSB_container {
+	margin-right: 12px;
 }
-
 
 /* btr-no-hamburger TODO: Make sure this stuff is right */
 
